--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
         <div class="w-50 text-black">
             <h1> RandMSG </h1>
             <p> Random Message Generator </p>
-            <button class="px-3 py-3 bg-blue-500 rounded" onClick="randMSG()">Click Me!</button>
+            <button class="px-3 py-3 bg-blue-500 rounded" onClick="randMSGx9()">9 Words</button>
+            <button class="px-3 py-3 bg-blue-500 rounded" onClick="randMSGx6()">6 Words</button>
+            <button class="px-3 py-3 bg-blue-500 rounded" onClick="randMSGx3()">3 Words</button>
             <br>
             <span id="span"></span>
         </div>
